swagger and user controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.data.mongodb.uri = mongodb+srv://Wave:fpt@cluster0.qk3eove.mongodb.net/Blog?retryWrites=true&w=majority
+spring.data.mongodb.uri = mongodb+srv://Wave:fpt@cluster0.qk3eove.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.database = Blog
+server.port=8080
+
+# swagger-ui custom path
+springdoc.swagger-ui.path=/swagger-ui.html
