--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,21 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		
+		<dependency>
+    		<groupId>org.springdoc</groupId>
+    		<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+    		<version>2.2.0</version>
+		</dependency>
+		<dependency>
+     		<groupId>org.springdoc</groupId>
+     		<artifactId>springdoc-openapi-common</artifactId>
+     		<version>1.2.24</version>
+   		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -44,7 +59,8 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<excludes>
+	
+ 				<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
