added login authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,18 @@
-spring.data.mongodb.uri = mongodb+srv://Wave:fpt@cluster0.qk3eove.mongodb.net/?retryWrites=true&w=majority
+# mongodb config
+spring.data.mongodb.uri = ${MONGODB_URI}
 spring.data.mongodb.database = Blog
 server.port=8080
 
 # swagger-ui custom path
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.enable-spring-security=true
+
+# spring security config
+logging.level.org.springframework.security=TRACE
+
+#Google oauth2
+spring.security.oauth2.client.registration.google.client-id= ${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret= ${GOOGLE_CLIENT_SECRET}
+#Github oauth2
+spring.security.oauth2.client.registration.github.client-id= ${GITHUB_CLIENT_ID}
+spring.security.oauth2.client.registration.github.client-secret= ${GITHUB_CLIENT_SECRET}
