--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # mongodb config
 spring.data.mongodb.uri = ${MONGODB_URI}
-spring.data.mongodb.database = Main
+# spring.data.mongodb.database = Main
 server.port=8080
 
 # swagger-ui custom path
@@ -17,4 +17,6 @@ spring.security.oauth2.client.registration.google.client-secret= ${GOOGLE_CLIENT
 #Github oauth2
 # spring.security.oauth2.client.registration.github.client-id= ${GITHUB_CLIENT_ID}
 # spring.security.oauth2.client.registration.github.client-secret= ${GITHUB_CLIENT_SECRET}
+
+spring.profiles.active=FPerspecTive
 
