--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>org.fperspective</groupId>
 	<artifactId>academic-blog-api</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<name>academic-blog-api</name>
 	<description>FPT Acadmic Blog</description>
 	<properties>
@@ -21,6 +21,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
+
+		<dependency>
+       		<groupId>org.springframework</groupId>
+       		<artifactId>spring-core</artifactId>
+  		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -51,12 +56,41 @@
 
 		<dependency>
         	<groupId>org.springframework.security</groupId>
+        	<artifactId>spring-security-oauth2-resource-server</artifactId>
+		</dependency>
+
+		<dependency>
+        	<groupId>org.springframework.security</groupId>
+        	<artifactId>spring-security-oauth2-authorization-server</artifactId>
+		</dependency>
+
+		<dependency>
+        	<groupId>org.springframework.security</groupId>
         	<artifactId>spring-security-oauth2-client</artifactId>
 		</dependency>
 
 		<dependency>
         	<groupId>org.springframework.security</groupId>
         	<artifactId>spring-security-oauth2-jose</artifactId>
+		</dependency>
+
+		
+		<dependency>
+    		<groupId>io.jsonwebtoken</groupId>
+    		<artifactId>jjwt-api</artifactId>
+    		<version>0.11.5</version>
+		</dependency>
+
+		<dependency>
+    		<groupId>io.jsonwebtoken</groupId>
+    		<artifactId>jjwt-impl</artifactId>
+    		<version>0.11.5</version>
+		</dependency>
+
+		<dependency>
+    		<groupId>io.jsonwebtoken</groupId>
+    		<artifactId>jjwt-jackson</artifactId>
+    		<version>0.11.5</version>
 		</dependency>
 
 
@@ -71,6 +105,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
 	</dependencies>
 
 	<build>
