--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.1.4</version>
+		<version>3.1.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>org.fperspective</groupId>
@@ -75,7 +75,7 @@
 		</dependency>
 
 		
-		<dependency>
+		<!-- <dependency>
     		<groupId>io.jsonwebtoken</groupId>
     		<artifactId>jjwt-api</artifactId>
     		<version>0.11.5</version>
@@ -91,7 +91,7 @@
     		<groupId>io.jsonwebtoken</groupId>
     		<artifactId>jjwt-jackson</artifactId>
     		<version>0.11.5</version>
-		</dependency>
+		</dependency> -->
 
 
 		<dependency>
