--- a/src/main/resources/.env
+++ b/src/main/resources/.env
@@ -1,4 +1,4 @@
 GOOGLE_CLIENT_ID=1024615608896-1njs6ro9910mqkbgdqfil5c6dpn6a08p.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-MONGODB_URI=mongodb+srv://Wave:fpt@academicblog.qowv1m2.mongodb.net/Main?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://Wave:fpt@academicblog.qowv1m2.mongodb.net/
 FRONT_END_URL=http://localhost:5173
