--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # mongodb config
-spring.data.mongodb.uri = mongodb+srv://Wave:fpt@academicblog.qowv1m2.mongodb.net/
+spring.data.mongodb.uri = ${MONGODB_URI}
 spring.data.mongodb.database = Main
 server.port=8080
 # spring.config.name=application,.env
@@ -14,8 +14,8 @@ logging.level.org.springframework.security=TRACE
 spring.main.allow-circular-references=true
 
 #Google oauth2
-spring.security.oauth2.client.registration.google.client-id= 1024615608896-1njs6ro9910mqkbgdqfil5c6dpn6a08p.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret= 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
+spring.security.oauth2.client.registration.google.client-id= ${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret= ${GOOGLE_CLIENT_SECRET}
 #Github oauth2
 # spring.security.oauth2.client.registration.github.client-id= ${GITHUB_CLIENT_ID}
 # spring.security.oauth2.client.registration.github.client-secret= ${GITHUB_CLIENT_SECRET}
