fixed most popular tag search

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 spring.data.mongodb.uri = ${MONGODB_URI}
 spring.data.mongodb.database = Main
 server.port=8080
-# spring.config.name=application,.env
-# spring.config.location=classpath:/
+spring.config.name=application,.env
+spring.config.location=classpath:/
 
 # swagger-ui custom path
 springdoc.swagger-ui.path=/swagger-ui.html
