--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,5 +20,5 @@ spring.security.oauth2.client.registration.google.client-secret= ${GOOGLE_CLIENT
 # spring.security.oauth2.client.registration.github.client-id= ${GITHUB_CLIENT_ID}
 # spring.security.oauth2.client.registration.github.client-secret= ${GITHUB_CLIENT_SECRET}
 
-spring.profiles.active=FPerspecTive
+# spring.profiles.active=FPerspecTive
 
