--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ springdoc.enable-spring-security=true
 # spring security config
 logging.level.org.springframework.security=TRACE
 spring.main.allow-circular-references=true
+# server.servlet.session.timeout= 30m
 # server.servlet.session.tracking-modes=COOKIE
 
 #Google oauth2
